Fix right alignment of last country select option
closes #50

--- a/source/stylesheets/cart.css.scss
+++ b/source/stylesheets/cart.css.scss
@@ -257,7 +257,7 @@
 
   label { margin-right: 1em; }
 
-  li:last-child { float: right; }
+  #discount_options { float: right; }
 }
 
 input#cart_discount_code {
